spark promos on mobile page (bug 646094)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@86903 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/mobile-home.css
+++ b/style/covehead/mobile-home.css
@@ -111,7 +111,7 @@
     color: #fff;
     text-decoration: none;
     text-align: center;
-    line-height: 26px;
+    line-height: 32px;
 }
 
 #mobile-home #button p:hover {
